                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.0
  *) [TS-895] Added version checks for bison and flex.

  *) [TS-1331] Wrong regex for ip in records config. Authors:
   Yakov Kopel and Uri Shachar.

  *) [TS-1348] Remove the active timeout when releasing or 
  binding server_session.

  *) [TS-1350] Detect and prefer LuaJIT

  *) [TS-538] Remove deprecated INKStats API

  *) [TS-1345] fix signed/unsigned compilation issues in Vec

  *) [TS-1343] Stat system doesn't check buffer sizes

  *) [TS-1342] Lua plugin initial hook support

  *) [TS-1314] Remove TS_ARG_MAX usage so that platforms with
  unlimited ARG_MAX can build correctly.

  *) [TS-1341] Remove remnants of TSCacheHookAdd() API.

  *) [TS-1328] TSMgmtIntCreate and TSMgmtStringCreate validation.
   Author: Yakov Kopel.

  *) [TS-1338] SSL not handling some events properly.

  *) [TS-1258] Need the ability to allow a user to alter the background fill
   config values on a per transaction basis. Author: Robert Logue.

  *) [TS-961] Add TSPortDescriptor API to support accepting connections with
   inbound transparency.

  *) [TS-1332] Silence spurious error when adding SSL certificates with
   alternate names.

  *) [TS-1087] TSHttpTxnOutgoingAddrSet forward declaration does not match
   implementation.

  *) [TS-1319] Large cache (> 16TB) not working
  Author: Van Doorn, Jan R <Jan_VanDoorn@cable.comcast.com>

  *) Fix a bug that ram cache and evcuation can not work
    well in disks larger than 2TB. Author: weijin

  *) [TS-1321] improve RT on Cluster purge missing objects
   Author: Bin Chen

  *) [TS-1312] Allow to open cache disk without O_DIRECT, for e.g. tmpfs
   "disk" cache.

  *) [TS-1289] stats codes mess up when disk fail

  *) [TS-959] remove ae_ua filter

  *) [TS-1310] Fix a endless loop in CacheVC::removeEvent.
   Author: weijin & Hua Cai

  *) [TS-1229] Fix collation in custom logging.
   Author: bettydramit
